- (BUGF) don't use yumdownloader when rpm_list is []
- (BUGF) fix default kickstart location
- (BUGF) properly "flatten" environment values for webapp
- (BUGF) stop yumdownloader including system yum repos
- (DOCS) update webui project page link
- (BUGF) remove caching logic from remote.py
- (FEAT) added --exclude-dns option to buildiso
- (BUGF) fix string comparisons to tolerate unicode

- Tue Mar 3 2009 - 1.4.3
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (BUGF) don't traceback on invalid cmd ("cobbler distro list --name=foo")
- (BUGF) fix import usage with --kickstart option (no more traceback)
- (BUGF) fix removal of images with child system objects
- (BUGF) make --rpmlist on repo use same parsing routes as the rest of cobbler
- (BUGF) default value for server override should be <<inherit>> not <inherit>
- (BUGF) ensure if virt bridge is set to "" it will apply the value from settings
- (BUGF) cobbler check should say path to config file is /etc/cobbler, not /var/lib
- (FEAT) enable cobblerweb username/pass logins when authing with spacewalk
- (BUGF) allow --kopts to take parameters that are shell quoted.
- (BUGF) allow kernel options to start with '-'
- (BUGF) prevent potential traceback when --template-file data isn't a hash
- (BUGF) set primary hostname manually in case Anaconda doesn't honor it
- (BUGF) Use shlex for parsing --kopts to allow a wider variety of kernel options
- (BUGF) prevent potential traceback when --template-file data isn't a hash
- (BUGF) anaconda doesn't honor nameserver always, set manually
- (BUGF) various post install network snippet fixes
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (SPEC) fix build for rawhide now that yaboot is included
- (BUGF) allow src and noarch arches for repo objects
- (BUGF) move to PyYAML for YAML implementation since it is better maintained
- (BUGF) fixed web-interface editing of ownership
- (BUGF) fixed web-interface editing of management classes